--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,6 @@ updates:
     directory: "/packages/webui" # Location of package manifests
     schedule:
       interval: "weekly"
+    commit-message:
+      prefix: "deps"
+      prefix-development: "deps(dev)"
