--- a/packages/webui/package.json
+++ b/packages/webui/package.json
@@ -16,8 +16,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
+    "react-json-view": "^1.21.3",
     "react-router": "^6.4.5",
     "react-router-dom": "^6.4.5",
+    "skchain": "workspace:^1.0.0",
     "xstate": "^4.35.0"
   },
   "devDependencies": {
