--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "lint": "eslint --cache .",
+    "lint:fix": "eslint --fix --cache .",
     "format": "prettier --write --cache .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,5 +30,6 @@
     "eslint-plugin-regexp": "^1.12.0",
     "prettier": "^2.8.3",
     "typescript": "^4.9.3"
-  }
+  },
+  "packageManager": "pnpm@7.25.0"
 }
