--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "prettier": "^2.8.3",
     "typescript": "^4.9.3"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "packageManager": "pnpm@7.25.0"
 }
