--- a/packages/skchain/package.json
+++ b/packages/skchain/package.json
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "scc",
   "license": "ISC",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "devDependencies": {
     "@types/libsodium-wrappers-sumo": "^0.7.5",
     "@types/node": "^18.11.13"
@@ -17,6 +20,9 @@
   "dependencies": {
     "@chain-web/network": "workspace:*",
     "@ipld/dag-cbor": "^8.0.0",
+    "@ipld/dag-pb": "^4.0.0",
+    "cac": "^6.7.14",
+    "chalk": "^5.2.0",
     "datastore-level": "^9.0.4",
     "libsodium-wrappers-sumo": "^0.7.10",
     "multiformats": "^10.0.2",
