--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lint": "eslint --cache .",
     "lint:fix": "eslint --fix --cache .",
     "format": "prettier --write --cache .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:dev": "node --experimental-vm-modules --no-warnings node_modules/jest/bin/jest.js --no-cache --verbose=false",
+    "test": "node --experimental-vm-modules --no-warnings node_modules/jest/bin/jest.js --no-cache"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,8 @@
   },
   "homepage": "https://github.com/chain-web/faith-stack#readme",
   "dependencies": {
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.11.13",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "eslint": "^8.32.0",
@@ -28,7 +31,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-regexp": "^1.12.0",
+    "jest": "^29.4.1",
     "prettier": "^2.8.3",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.3"
   },
   "engines": {
