--- a/packages/skchain/package.json
+++ b/packages/skchain/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "type": "module",
   "keywords": [],
