--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "simple-git-hooks",
     "lint": "eslint --cache .",
     "lint:fix": "eslint --fix --cache .",
     "format": "prettier --write --cache .",
@@ -32,12 +34,28 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-regexp": "^1.12.0",
     "jest": "^29.4.1",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
+    "simple-git-hooks": "^2.8.1",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.3"
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm exec lint-staged --concurrent false"
+  },
+  "lint-staged": {
+    "*": [
+      "prettier --write --cache --ignore-unknown"
+    ],
+    "packages/*/{src,types,tests}/**/*.ts": [
+      "eslint --cache --fix"
+    ],
+    "packages/**/*.d.ts": [
+      "eslint --cache --fix"
+    ]
   },
   "packageManager": "pnpm@7.25.0"
 }
