--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "isolatedModules": false,
     "esModuleInterop": true,
     "types": ["node", "jest"],
-    "lib": ["ESNext", "DOM"],
+    "lib": ["ESNext", "DOM"]
   },
   "include": ["**/src", "**/tests"],
   "esm": true
