--- a/packages/skchain/package.json
+++ b/packages/skchain/package.json
@@ -24,7 +24,9 @@
     "cac": "^6.7.14",
     "chalk": "^5.2.0",
     "datastore-level": "^9.0.4",
+    "interface-datastore": "^7.0.3",
     "libsodium-wrappers-sumo": "^0.7.10",
+    "memory-level": "^1.0.0",
     "multiformats": "^10.0.2",
     "peer-id": "^0.16.0",
     "ts-node": "^10.9.1",
