--- a/packages/skchain/package.json
+++ b/packages/skchain/package.json
@@ -19,13 +19,16 @@
   },
   "dependencies": {
     "@chain-web/network": "workspace:*",
+    "@ethereumjs/trie": "^5.0.2",
     "@ipld/dag-cbor": "^8.0.0",
     "@ipld/dag-pb": "^4.0.0",
+    "abstract-level": "^1.0.3",
     "bitset": "^5.1.1",
     "cac": "^6.7.14",
     "chalk": "^5.2.0",
     "datastore-level": "^9.0.4",
     "interface-datastore": "^7.0.3",
+    "level": "^8.0.0",
     "libsodium-wrappers-sumo": "^0.7.10",
     "memory-level": "^1.0.0",
     "multiformats": "^10.0.2",
