--- a/packages/webui/package.json
+++ b/packages/webui/package.json
@@ -30,6 +30,7 @@
     "xstate": "^4.35.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.30.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.1.0",
