--- a/packages/skchain/package.json
+++ b/packages/skchain/package.json
@@ -37,6 +37,7 @@
     "tweetnacl": "^1.0.3",
     "typescript": "^4.9.3",
     "uint8arrays": "^4.0.2",
+    "skvm": "workspace:^1.0.0",
     "xstate": "^4.35.0"
   }
 }
