--- a/packages/webui/package.json
+++ b/packages/webui/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "e2e": "playwright test",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
