--- a/packages/skvm/Cargo.toml
+++ b/packages/skvm/Cargo.toml
@@ -15,6 +15,7 @@ wasm-bindgen = "0.2.84"
 getrandom = { version = "0.2.8", features = ["js"] }
 boa_engine = { path = "../skboa/boa_engine", features = ["console"] }
 wasm-bindgen-test = "0.3.13"
+js-sys = "0.3.61"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
