--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "node": ">=16.0.0"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm exec lint-staged --concurrent false"
+    "pre-commit": "pnpm exec lint-staged --concurrent false",
+    "post-checkout": "sh ./auto-git-pull.sh"
   },
   "lint-staged": {
     "*": [
