--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -2,23 +2,28 @@
   "name": "@faithstack/contract",
   "version": "1.0.0",
   "description": "",
-  "main": "src/node",
-  "browser": "src/browser",
+  "main": "src/index",
   "type": "module",
-  "bin": "dist/cli.js",
   "typings": "./src/index.ts",
   "scripts": {
-    "test": "tsc -p ./tsconfig.build.json && node ./dist/src/cli.js build ./examples/coin/index.ts && rm -rf ./dist"
+    "test": "tsc -p ./tsconfig.build.json && node ./dist/src/cli.js build ./examples/coin/index.ts && rm -rf ./dist",
+    "gen-proto": "protoc --ts_out ./src/proto_ts --proto_path ../skvm/proto ../skvm/proto/*.proto"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faithstack/contract_builder": "workspace:^1.0.0",
+    "@faithstack/vm": "workspace:^1.0.0",
+    "@protobuf-ts/runtime": "^2.8.2",
     "@swc/core": "^1.3.35",
     "@swc/wasm-web": "^1.3.35",
     "cac": "^6.7.14",
     "chalk": "^5.2.0",
-    "skchain": "workspace:^1.0.0",
     "multiformats": "^10.0.2"
+  },
+  "devDependencies": {
+    "@protobuf-ts/plugin": "^2.8.2",
+    "@protobuf-ts/protoc": "^2.8.2"
   }
 }
