--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
     "strictNullChecks": true,
     "module": "ESNext",
     "target": "esnext",
