--- a/packages/webui/package.json
+++ b/packages/webui/package.json
@@ -20,6 +20,7 @@
     "esbuild": "^0.17.10",
     "i18next": "^22.4.10",
     "i18next-browser-languagedetector": "^7.0.1",
+    "multiformats": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
