feat: update did generate method

--- a/packages/skchain/package.json
+++ b/packages/skchain/package.json
@@ -24,6 +24,8 @@
     "@faithstack/contract": "workspace:^1.0.0",
     "@ipld/dag-cbor": "^8.0.0",
     "@ipld/dag-pb": "^4.0.0",
+    "@libp2p/crypto": "^1.0.14",
+    "@libp2p/peer-id-factory": "^2.0.3",
     "abstract-level": "^1.0.3",
     "bitset": "^5.1.1",
     "cac": "^6.7.14",
@@ -34,7 +36,6 @@
     "libsodium-wrappers-sumo": "^0.7.10",
     "memory-level": "^1.0.0",
     "multiformats": "^10.0.2",
-    "peer-id": "^0.16.0",
     "ts-node": "^10.9.1",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.9.3",
