--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -13,8 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@chainsafe/libp2p-noise": "^10.2.0",
-    "@multiformats/multiaddr": "^11.1.0",
+    "@libp2p/interface-peer-id": "^2.0.1",
+    "@libp2p/tcp": "^6.1.3",
+    "@multiformats/multiaddr": "^11.6.1",
+    "interface-datastore": "^7.0.3",
     "libp2p": "^0.42.2",
-    "uint8arrays": "^4.0.2"
+    "uint8arrays": "^4.0.3"
   }
 }
