deps: update ipfs and libp2p deps

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,7 +33,8 @@
     "GitHub.vscode-pull-request-github",
     "ms-playwright.playwright",
     "rust-lang.rust-analyzer",
-    "bungcip.better-toml"
+    "bungcip.better-toml",
+    "GitHub.copilot"
   ],
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
