--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "homepage": "https://github.com/chain-web/faith-stack#readme",
   "dependencies": {
     "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.3",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
+    "@types/node": "^18.15.5",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-define-config": "^1.17.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
@@ -35,13 +35,22 @@
     "eslint-plugin-regexp": "^1.13.0",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.0",
-    "prettier": "^2.8.5",
+    "prettier": "^2.8.6",
     "simple-git-hooks": "^2.8.1",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "pnpm": {
+    "packageExtensions": {
+      "datastore-core": {
+        "dependencies": {
+          "interface-datastore": "*"
+        }
+      }
+    }
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged --concurrent false",
