--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -12,11 +12,13 @@
   "author": "scc",
   "license": "ISC",
   "dependencies": {
+    "@chainsafe/libp2p-gossipsub": "^6.2.0",
     "@chainsafe/libp2p-noise": "^10.2.0",
     "@libp2p/interface-peer-id": "^2.0.1",
-    "@libp2p/tcp": "^6.1.3",
+    "@libp2p/mplex": "^7.1.2",
+    "@libp2p/tcp": "^6.1.4",
     "@multiformats/multiaddr": "^11.6.1",
-    "interface-datastore": "^7.0.3",
+    "interface-datastore": "^8.1.1",
     "libp2p": "^0.42.2",
     "uint8arrays": "^4.0.3"
   }
