--- a/packages/skchain/package.json
+++ b/packages/skchain/package.json
@@ -16,30 +16,31 @@
   },
   "devDependencies": {
     "@types/libsodium-wrappers-sumo": "^0.7.5",
-    "@types/node": "^18.11.13"
+    "@types/node": "^18.15.5"
   },
   "dependencies": {
     "@chain-web/network": "workspace:*",
-    "@ethereumjs/trie": "^5.0.2",
+    "@ethereumjs/trie": "^5.0.4",
     "@faithstack/contract": "workspace:^1.0.0",
-    "@ipld/dag-cbor": "^8.0.0",
-    "@ipld/dag-pb": "^4.0.0",
+    "@ipld/dag-cbor": "^9.0.0",
+    "@ipld/dag-pb": "^4.0.2",
     "@libp2p/crypto": "^1.0.14",
     "@libp2p/peer-id-factory": "^2.0.3",
     "abstract-level": "^1.0.3",
     "bitset": "^5.1.1",
     "cac": "^6.7.14",
     "chalk": "^5.2.0",
-    "datastore-level": "^9.0.4",
-    "interface-datastore": "^7.0.3",
+    "datastore-core": "^9.0.3",
+    "datastore-level": "^10.0.1",
+    "interface-datastore": "^8.1.1",
     "level": "^8.0.0",
-    "libsodium-wrappers-sumo": "^0.7.10",
+    "libsodium-wrappers-sumo": "^0.7.11",
     "memory-level": "^1.0.0",
-    "multiformats": "^10.0.2",
+    "multiformats": "^11.0.2",
     "ts-node": "^10.9.1",
     "tweetnacl": "^1.0.3",
-    "typescript": "^4.9.3",
-    "uint8arrays": "^4.0.2",
-    "xstate": "^4.35.0"
+    "typescript": "^4.9.5",
+    "uint8arrays": "^4.0.3",
+    "xstate": "^4.37.0"
   }
 }
