--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index",
   "type": "module",
-  "typings": "./src/index.ts",
+  "types": "./src/index.ts",
   "scripts": {
     "test": "tsc -p ./tsconfig.build.json && node ./dist/src/cli.js build ./examples/coin/index.ts && rm -rf ./dist",
     "gen-proto": "protoc --ts_out ./src/proto_ts --proto_path ../skvm/proto ../skvm/proto/*.proto"
