--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index",
   "types": "src/index.ts",
+  "browser": "src/index.browser",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,14 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@chainsafe/libp2p-gossipsub": "^6.2.0",
-    "@chainsafe/libp2p-noise": "^11.0.2",
+    "@chainsafe/libp2p-noise": "^11.0.4",
     "@libp2p/interface-peer-id": "^2.0.1",
-    "@libp2p/kad-dht": "^8.0.4",
-    "@libp2p/mplex": "^7.1.2",
+    "@libp2p/kad-dht": "^8.0.6",
+    "@libp2p/mplex": "^7.1.3",
     "@libp2p/tcp": "^6.1.5",
+    "@libp2p/webrtc": "^1.1.0",
+    "@libp2p/websockets": "^5.0.8",
     "@multiformats/multiaddr": "^11.6.1",
     "interface-datastore": "^8.2.0",
-    "libp2p": "^0.43.3",
+    "libp2p": "^0.43.4",
     "uint8arrays": "^4.0.3"
   }
 }
