--- a/packages/webui/package.json
+++ b/packages/webui/package.json
@@ -16,29 +16,29 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@xstate/react": "^3.2.1",
-    "antd": "^5.2.3",
-    "esbuild": "^0.17.10",
-    "i18next": "^22.4.10",
+    "antd": "^5.4.0",
+    "esbuild": "^0.17.16",
+    "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
-    "multiformats": "^10.0.2",
+    "multiformats": "^11.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
     "react-json-view": "^1.21.3",
-    "react-router": "^6.8.2",
-    "react-router-dom": "^6.8.2",
-    "rollup-plugin-node-polyfills": "^0.2.1",
+    "react-router": "^6.10.0",
+    "react-router-dom": "^6.10.0",
+    "rollup-plugin-node-polyfills": "./libs/rollup-plugin-node-polyfills",
     "skchain": "workspace:^1.0.0",
-    "xstate": "^4.37.0"
+    "xstate": "^4.37.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.31.2",
-    "@types/react": "^18.0.28",
+    "@playwright/test": "^1.32.2",
+    "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react-swc": "^3.2.0",
-    "sass": "^1.58.3",
+    "@vitejs/plugin-react-swc": "^3.3.0",
+    "sass": "^1.61.0",
     "typescript": "^4.9.5",
-    "vite": "^4.1.4",
+    "vite": "^4.2.1",
     "vite-plugin-imp": "^2.3.1"
   }
 }
