--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@chain-web/network",
+  "name": "@trustack/network",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "module": "./src/index",
+  "main": "src/index",
+  "types": "src/index.ts",
+  "browser": "src/index.browser",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,14 +13,17 @@
   "author": "scc",
   "license": "ISC",
   "dependencies": {
-    "@chainsafe/libp2p-gossipsub": "^6.2.0",
-    "@chainsafe/libp2p-noise": "^10.2.0",
+    "@chainsafe/libp2p-gossipsub": "^6.3.0",
+    "@chainsafe/libp2p-noise": "^11.0.4",
     "@libp2p/interface-peer-id": "^2.0.1",
-    "@libp2p/mplex": "^7.1.2",
-    "@libp2p/tcp": "^6.1.4",
+    "@libp2p/kad-dht": "^8.0.9",
+    "@libp2p/mplex": "^7.1.7",
+    "@libp2p/tcp": "^6.2.1",
+    "@libp2p/webrtc": "^1.1.5",
+    "@libp2p/websockets": "^5.0.10",
     "@multiformats/multiaddr": "^11.6.1",
-    "interface-datastore": "^8.1.1",
-    "libp2p": "^0.42.2",
+    "interface-datastore": "^8.2.0",
+    "libp2p": "^0.43.4",
     "uint8arrays": "^4.0.3"
   }
 }
