--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
   "homepage": "https://github.com/chain-web/faith-stack#readme",
   "dependencies": {
     "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.5",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "eslint": "^8.36.0",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-define-config": "^1.17.0",
+    "eslint-define-config": "^1.18.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-regexp": "^1.13.0",
+    "eslint-plugin-regexp": "^1.14.0",
     "jest": "^29.5.0",
-    "lint-staged": "^13.2.0",
-    "prettier": "^2.8.6",
+    "lint-staged": "^13.2.1",
+    "prettier": "^2.8.7",
     "simple-git-hooks": "^2.8.1",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.5"
   },
   "engines": {
@@ -48,6 +48,11 @@
       "datastore-core": {
         "dependencies": {
           "interface-datastore": "*"
+        }
+      },
+      "ipfs-bitswap": {
+        "dependencies": {
+          "it-drain": "*"
         }
       }
     }
