feat: add nodeCollect module

--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -16,10 +16,11 @@
     "@chainsafe/libp2p-gossipsub": "^6.3.0",
     "@chainsafe/libp2p-noise": "^11.0.4",
     "@libp2p/interface-peer-id": "^2.0.1",
-    "@libp2p/kad-dht": "^8.0.9",
+    "@libp2p/kad-dht": "^8.0.12",
+    "@libp2p/mdns": "^7.0.4",
     "@libp2p/mplex": "^7.1.7",
-    "@libp2p/tcp": "^6.2.1",
-    "@libp2p/webrtc": "^1.1.5",
+    "@libp2p/tcp": "^6.2.2",
+    "@libp2p/webrtc": "^1.1.10",
     "@libp2p/websockets": "^5.0.10",
     "@multiformats/multiaddr": "^11.6.1",
     "interface-datastore": "^8.2.0",
