--- a/packages/skchain/package.json
+++ b/packages/skchain/package.json
@@ -16,10 +16,11 @@
   },
   "devDependencies": {
     "@types/libsodium-wrappers-sumo": "^0.7.5",
-    "@types/node": "^18.15.11"
+    "@types/lodash": "^4.14.194",
+    "@types/node": "^18.16.3"
   },
   "dependencies": {
-    "@ethereumjs/trie": "^5.0.4",
+    "@ethereumjs/trie": "^5.0.5",
     "@faithstack/contract": "workspace:^1.0.0",
     "@ipld/dag-cbor": "^9.0.0",
     "@ipld/dag-pb": "^4.0.2",
@@ -39,12 +40,13 @@
     "ipfs-bitswap": "^17.0.2",
     "level": "^8.0.0",
     "libsodium-wrappers-sumo": "^0.7.11",
+    "lodash": "^4.17.21",
     "memory-level": "^1.0.0",
     "multiformats": "^11.0.2",
     "ts-node": "^10.9.1",
     "tweetnacl": "^1.0.3",
     "typescript": "^4.9.5",
     "uint8arrays": "^4.0.3",
-    "xstate": "^4.37.1"
+    "xstate": "^4.37.2"
   }
 }
