--- a/packages/skvm/Cargo.toml
+++ b/packages/skvm/Cargo.toml
@@ -13,7 +13,7 @@ default = ["console_error_panic_hook"]
 [dependencies]
 wasm-bindgen = "0.2.84"
 getrandom = { version = "0.2.8", features = ["js"] }
-boa_engine = { path = "./skboa/boa_engine", features = ["console"] }
+boa_engine = { path = "./skboa/boa_engine" }
 wasm-bindgen-test = "0.3.13"
 js-sys = "0.3.61"
 protobuf = "3.2.0"
