feat: node can run at nodeJs

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,7 @@
     "eamodio.gitlens",
     "GitHub.vscode-pull-request-github",
     "ms-playwright.playwright",
-    "rust-lang.rust-analyzer",
+    // "rust-lang.rust-analyzer",
     "bungcip.better-toml",
     "GitHub.copilot"
   ],
