--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,5 +45,8 @@ jobs:
       - name: Install deps
         run: pnpm install
 
+      - name: build packages
+        run: pnpm run -r build
+
       - name: test
         run: pnpm run test
