--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --cache .",
     "lint:fix": "eslint --fix --cache .",
     "format": "prettier --write --cache .",
+    "build:clear": "rm -rf ./**/**/dist/",
     "test:dev": "node --experimental-vm-modules --no-warnings node_modules/jest/bin/jest.js --no-cache ",
     "test": "node --experimental-vm-modules --no-warnings node_modules/jest/bin/jest.js --no-cache --silent"
   },
