--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -2,12 +2,13 @@
   "name": "@faithstack/contract",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index",
+  "main": "dist/index.mjs",
   "type": "module",
-  "types": "./src/index.ts",
+  "types": "./src/index.mts",
   "scripts": {
     "test": "tsc -p ./tsconfig.build.json && node ./dist/src/cli.js build ./examples/coin/index.ts && rm -rf ./dist",
-    "gen-proto": "protoc --ts_out ./src/proto_ts --proto_path ../skvm/proto ../skvm/proto/*.proto"
+    "gen-proto": "protoc --ts_out ./src/proto_ts --proto_path ../skvm/proto ../skvm/proto/*.proto",
+    "build": "tsc -p ./tsconfig.build.json"
   },
   "keywords": [],
   "author": "",
