--- a/packages/contract_builder/tsconfig.build.json
+++ b/packages/contract_builder/tsconfig.build.json
@@ -1,19 +1,6 @@
 {
+  "extends": "../tsconfig.build.json",
   "compilerOptions": {
-    "strictNullChecks": true,
-    "module": "NodeNext",
-    "target": "ESNext",
-    "sourceMap": true,
-    "moduleResolution": "nodenext",
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "declaration": true,
-    "isolatedModules": false,
-    "esModuleInterop": true,
-    "types": ["node", "jest"],
-    "lib": ["ESNext"],
     "outDir": "./dist",
     "baseUrl": "./src"
   },
