--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -2,11 +2,12 @@
   "name": "@trustack/network",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index",
-  "types": "src/index.ts",
+  "main": "dist/index.mjs",
+  "types": "src/index.mts",
   "browser": "src/index.browser",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -p ./tsconfig.build.json"
   },
   "type": "module",
   "keywords": [],
