--- a/packages/skchain/package.json
+++ b/packages/skchain/package.json
@@ -2,10 +2,11 @@
   "name": "skchain",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index",
-  "types": "src/index.ts",
+  "main": "dist/src/index.mjs",
+  "types": "src/index.mts",
   "scripts": {
-    "test": ""
+    "test": "",
+    "build": "tsc -p ./tsconfig.build.json"
   },
   "type": "module",
   "keywords": [],
