--- a/packages/sknode/package.json
+++ b/packages/sknode/package.json
@@ -4,10 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -p ./tsconfig.build.json",
+    "start": "npm run build && node  --experimental-wasm-modules ./dist/index.mjs"
   },
   "type": "commonjs",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "skchain": "workspace:^1.0.0"
+  }
 }
