--- a/packages/skvm/package.json
+++ b/packages/skvm/package.json
@@ -2,7 +2,7 @@
   "name": "@faithstack/vm",
   "version": "1.0.0",
   "description": "",
-  "main": "node.js",
+  "main": "node.mjs",
   "browser": "browser.js",
   "types": "index.d.ts",
   "files": [
