--- a/packages/sknode/package.json
+++ b/packages/sknode/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p ./tsconfig.build.json",
-    "start": "npm run build && node  --experimental-wasm-modules ./dist/index.mjs"
+    "start": "npm run build && RPC_PORT=3322 node  --experimental-wasm-modules ./dist/index.mjs"
   },
-  "type": "commonjs",
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "skchain": "workspace:^1.0.0"
+    "@trpc/client": "^10.25.1",
+    "@trpc/server": "^10.25.1",
+    "execa": "^7.1.1",
+    "skchain": "workspace:^1.0.0",
+    "zod": "^3.21.4"
   }
 }
