--- a/packages/webui/package.json
+++ b/packages/webui/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "e2e": "playwright test",
     "build": "tsc && vite build",
-    "static-server": "node ./e2e/server.mjs",
+    "server": "node ./e2e/server.mjs",
     "preview": "vite preview"
   },
   "engines": {
