--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "@chain-web/node",
+  "name": "@trustack/common",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.mjs",
+  "types": "src/index.mts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev-build": "tsc -w -p ./tsconfig.build.json",
-    "build": "tsc -p ./tsconfig.build.json",
-    "start": "npm run build && RPC_PORT=3322 node  --experimental-wasm-modules ./dist/index.mjs"
+    "build": "tsc -p ./tsconfig.build.json"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -19,7 +18,6 @@
   "dependencies": {
     "@trpc/client": "^10.25.1",
     "@trpc/server": "^10.25.1",
-    "@trustack/common": "workspace:^1.0.0",
     "execa": "^7.1.1",
     "skchain": "workspace:^1.0.0",
     "zod": "^3.21.4"
