--- a/packages/skchain/package.json
+++ b/packages/skchain/package.json
@@ -6,6 +6,7 @@
   "types": "src/index.mts",
   "scripts": {
     "test": "",
+    "dev-build": "tsc -w -p ./tsconfig.build.json",
     "build": "tsc -p ./tsconfig.build.json"
   },
   "type": "module",
