--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "faith-stack",
+  "name": "trustack",
   "version": "0.0.1",
   "description": "",
   "scripts": {
@@ -14,26 +14,26 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chain-web/faith-stack.git"
+    "url": "git+https://github.com/chain-web/trustack.git"
   },
   "author": "scc",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/chain-web/faith-stack/issues"
+    "url": "https://github.com/chain-web/trustack/issues"
   },
-  "homepage": "https://github.com/chain-web/faith-stack#readme",
+  "homepage": "https://github.com/chain-web/trustack#readme",
   "dependencies": {
     "@types/jest": "^29.5.1",
-    "@types/node": "^18.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "eslint": "^8.39.0",
+    "@types/node": "^18.16.10",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-define-config": "^1.20.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-regexp": "^1.14.0",
+    "eslint-plugin-regexp": "^1.15.0",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
