--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@faithstack/contract",
+  "name": "@trustack/contract",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.mjs",
@@ -14,17 +14,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@faithstack/contract_builder": "workspace:^1.0.0",
-    "@faithstack/vm": "workspace:^1.0.0",
-    "@protobuf-ts/runtime": "^2.8.2",
-    "@swc/core": "^1.3.35",
-    "@swc/wasm-web": "^1.3.35",
+    "@trustack/contract_builder": "workspace:^1.0.0",
+    "@trustack/vm": "workspace:^1.0.0",
+    "@protobuf-ts/runtime": "^2.9.0",
+    "@swc/core": "^1.3.58",
+    "@swc/wasm-web": "^1.3.58",
     "cac": "^6.7.14",
     "chalk": "^5.2.0",
-    "multiformats": "^10.0.2"
+    "multiformats": "^10.0.3"
   },
   "devDependencies": {
-    "@protobuf-ts/plugin": "^2.8.2",
-    "@protobuf-ts/protoc": "^2.8.2"
+    "@protobuf-ts/plugin": "^2.9.0",
+    "@protobuf-ts/protoc": "^2.9.0"
   }
 }
