--- a/packages/skvm/package.json
+++ b/packages/skvm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@faithstack/vm",
+  "name": "@trustack/vm",
   "version": "1.0.0",
   "description": "",
   "main": "node.mjs",
@@ -16,6 +16,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.5"
   }
 }
