--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -14,18 +14,19 @@
   "author": "scc",
   "license": "ISC",
   "dependencies": {
-    "@chainsafe/libp2p-gossipsub": "^6.3.0",
-    "@chainsafe/libp2p-noise": "^11.0.4",
+    "@chainsafe/libp2p-gossipsub": "^8.0.0",
+    "@chainsafe/libp2p-noise": "^12.0.0",
     "@libp2p/interface-peer-id": "^2.0.2",
-    "@libp2p/kad-dht": "^8.0.12",
-    "@libp2p/mdns": "^7.0.5",
-    "@libp2p/mplex": "^7.1.7",
-    "@libp2p/tcp": "^6.2.2",
-    "@libp2p/webrtc": "^1.2.0",
+    "@libp2p/interface-pubsub": "^3.0.7",
+    "@libp2p/kad-dht": "^9.3.4",
+    "@libp2p/mdns": "^8.0.0",
+    "@libp2p/mplex": "^8.0.3",
+    "@libp2p/tcp": "^7.0.1",
+    "@libp2p/webrtc": "^2.0.4",
     "@libp2p/websockets": "^5.0.10",
-    "@multiformats/multiaddr": "^11.6.1",
+    "@multiformats/multiaddr": "^12.1.3",
     "interface-datastore": "^8.2.0",
-    "libp2p": "^0.43.4",
+    "libp2p": "^0.45.2",
     "uint8arrays": "^4.0.3"
   }
 }
