--- a/packages/skchain/package.json
+++ b/packages/skchain/package.json
@@ -29,6 +29,7 @@
     "@libp2p/interface-peer-id": "^2.0.2",
     "@libp2p/interface-pubsub": "^3.0.7",
     "@libp2p/peer-id-factory": "^2.0.3",
+    "@multiformats/multiaddr": "^12.1.3",
     "@trustack/common": "workspace:^1.0.0",
     "@trustack/contract": "workspace:^1.0.0",
     "@trustack/network": "workspace:^1.0.0",
