--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@chainsafe/libp2p-gossipsub": "^8.0.0",
     "@chainsafe/libp2p-noise": "^12.0.0",
+    "@libp2p/bootstrap": "^8.0.0",
     "@libp2p/interface-peer-id": "^2.0.2",
     "@libp2p/interface-pubsub": "^3.0.7",
     "@libp2p/kad-dht": "^9.3.4",
