--- a/packages/sknode/package.json
+++ b/packages/sknode/package.json
@@ -22,6 +22,7 @@
     "@trpc/server": "^10.27.1",
     "@trustack/common": "workspace:^1.0.0",
     "execa": "^7.1.1",
+    "kill-port": "^2.0.1",
     "multiformats": "^11.0.2",
     "skchain": "workspace:^1.0.0",
     "zod": "^3.21.4"
