--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -14,12 +14,5 @@
   "type": "module",
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@trpc/client": "^10.25.1",
-    "@trpc/server": "^10.25.1",
-    "execa": "^7.1.1",
-    "skchain": "workspace:^1.0.0",
-    "zod": "^3.21.4"
-  }
+  "license": "ISC"
 }
