--- a/packages/contract_builder/package.json
+++ b/packages/contract_builder/package.json
@@ -5,7 +5,7 @@
   "main": "dist/src/node.mjs",
   "browser": "src/browser",
   "type": "module",
-  "bin": "dist/cli.js",
+  "bin": "dist/src/cli.js",
   "typings": "./src/index.ts",
   "scripts": {
     "test": "tsc -p ../tsconfig.build.json && node ./dist/src/cli.js build ./examples/coin/index.ts && rm -rf ./dist",
@@ -15,11 +15,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@swc/core": "^1.3.61",
+    "@swc/wasm-web": "^1.3.61",
     "@trustack/vm": "workspace:^1.0.0",
-    "@swc/core": "^1.3.58",
-    "@swc/wasm-web": "^1.3.58",
     "cac": "^6.7.14",
     "chalk": "^5.2.0",
-    "multiformats": "^10.0.3"
+    "multiformats": "^11.0.2"
   }
 }
