--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -14,5 +14,9 @@
   "type": "module",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bls-eth-wasm": "^1.0.6",
+    "multiformats": "^11.0.2"
+  }
 }
