--- a/packages/common/tsconfig.build.json
+++ b/packages/common/tsconfig.build.json
@@ -1,23 +1,8 @@
 {
+  "extends": "../tsconfig.build.json",
   "compilerOptions": {
-    "strictNullChecks": true,
-    "module": "ESNext",
-    "target": "esnext",
-    "sourceMap": true,
-    "experimentalDecorators": true,
-    "moduleResolution": "nodenext",
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "declaration": true,
-    "isolatedModules": false,
-    "esModuleInterop": true,
-    "types": ["node", "jest"],
-    "lib": ["ESNext", "DOM"],
     "outDir": "./dist",
     "baseUrl": "./src"
   },
-  "include": ["src"],
-  "esm": true
+  "include": ["src"]
 }
