--- a/packages/tsconfig.build.json
+++ b/packages/tsconfig.build.json
@@ -15,5 +15,6 @@
     "esModuleInterop": true,
     "types": ["node", "jest"],
     "lib": ["ESNext", "DOM"]
-  }
+  },
+  "exclude": ["/**/__tests__"]
 }
