--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,17 @@ nest-app/dist
 /dockerdb
 **/ipfsdb/
 **/wasm/target/
+
+# generated types
+.astro/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+# environment variables
+.env
+.env.production
