--- a/packages/webui/package.json
+++ b/packages/webui/package.json
@@ -19,17 +19,18 @@
     "@trustack/node-modules-polyfill": "^0.2.5",
     "@trustack/rollup-plugin-node-polyfills": "^0.2.2",
     "@xstate/react": "^3.2.2",
-    "antd": "^5.6.3",
+    "antd": "^5.6.4",
+    "buffer": "^6.0.3",
     "esbuild": "^0.17.19",
     "i18next": "^22.5.1",
-    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next-browser-languagedetector": "^7.1.0",
     "mime-types": "^2.1.35",
     "multiformats": "^11.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
-    "react-router": "^6.14.0",
-    "react-router-dom": "^6.14.0",
+    "react-router": "^6.14.1",
+    "react-router-dom": "^6.14.1",
     "skchain": "workspace:^1.0.0",
     "xstate": "^4.38.0"
   },
@@ -40,7 +41,7 @@
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "sass": "^1.63.6",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9"
+    "typescript": "^5.1.6",
+    "vite": "^4.4.2"
   }
 }
