feat: init land app

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [main, master]
 jobs:
-  test:
+  test-webui:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
@@ -35,3 +35,34 @@ jobs:
           name: playwright-report
           path: packages/webui/playwright-report/
           retention-days: 30
+
+  test-landapp:
+  timeout-minutes: 60
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v3
+    - name: Install pnpm
+      uses: pnpm/action-setup@v2.2.4
+
+    - name: Set node version to 18
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+        cache: "pnpm"
+
+    - name: Install dependencies
+      run: pnpm install
+    - name: build packages
+      run: pnpm run -r build
+    - name: Install Playwright Browsers
+      run: cd packages/land_app && pnpm exec playwright install --with-deps
+    - name: Build fe
+      run: cd packages/land_app && npm run build
+    - name: Run Playwright tests
+      run: cd packages/land_app && pnpm exec playwright test
+    - uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: playwright-report
+        path: packages/land_app/playwright-report/
+        retention-days: 30
