--- a/packages/land_app/package.json
+++ b/packages/land_app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webui",
+  "name": "land-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -22,10 +22,13 @@
     "antd": "^5.6.4",
     "buffer": "^6.0.3",
     "esbuild": "^0.17.19",
+    "i18next": "^22.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
     "mime-types": "^2.1.35",
     "multiformats": "^11.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
     "skchain": "workspace:^1.0.0",
