--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -12,6 +12,10 @@
   "engines": {
     "node": ">=16.0.0"
   },
+  "files": [
+    "dist",
+    "src"
+  ],
   "type": "module",
   "keywords": [],
   "author": "",
