--- a/packages/land_app/package.json
+++ b/packages/land_app/package.json
@@ -14,7 +14,24 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@deck.gl/core": "^8.9.21",
+    "@deck.gl/extensions": "^8.9.21",
+    "@deck.gl/geo-layers": "^8.9.21",
+    "@deck.gl/layers": "^8.9.21",
+    "@deck.gl/mapbox": "^8.9.21",
+    "@deck.gl/mesh-layers": "^8.9.21",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@loaders.gl/core": "^3.4.7",
+    "@loaders.gl/gltf": "^3.4.7",
+    "@loaders.gl/images": "^3.4.7",
+    "@luma.gl/constants": "^8.5.20",
+    "@luma.gl/core": "^8.5.20",
+    "@luma.gl/engine": "^8.5.20",
+    "@luma.gl/gltools": "^8.5.20",
+    "@luma.gl/shadertools": "^8.5.20",
+    "@luma.gl/webgl": "^8.5.20",
+    "@math.gl/core": "^3.6.3",
+    "@math.gl/web-mercator": "^3.6.3",
     "@trustack/common": "workspace:^1.0.0",
     "@trustack/node-modules-polyfill": "^0.2.5",
     "@trustack/rollup-plugin-node-polyfills": "^0.2.2",
@@ -22,8 +39,11 @@
     "antd": "^5.6.4",
     "buffer": "^6.0.3",
     "esbuild": "^0.17.19",
+    "gl-matrix": "^3.4.3",
+    "h3-js": "^4.1.0",
     "i18next": "^22.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
+    "mapbox-gl": "^2.15.0",
     "mime-types": "^2.1.35",
     "multiformats": "^11.0.2",
     "react": "^18.2.0",
@@ -31,12 +51,14 @@
     "react-i18next": "^12.3.1",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
+    "search-insights": "^2.7.0",
     "skchain": "workspace:^1.0.0",
     "xstate": "^4.38.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.35.1",
     "@rollup/plugin-inject": "^5.0.3",
+    "@types/mapbox-gl": "^2.7.11",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react-swc": "^3.3.2",
