feat: add constractHelper and gen_cid method

--- a/package.json
+++ b/package.json
@@ -131,5 +131,8 @@
       "eslint --cache --fix"
     ]
   },
-  "packageManager": "pnpm@7.25.0"
+  "packageManager": "pnpm@7.25.0",
+  "devDependencies": {
+    "@trustack/contract": "workspace:^1.0.0"
+  }
 }
