--- a/packages/sknode/package.json
+++ b/packages/sknode/package.json
@@ -21,6 +21,7 @@
     "@trpc/client": "^10.34.0",
     "@trpc/server": "^10.34.0",
     "@trustack/common": "workspace:^1.0.0",
+    "@trustack/contract": "workspace:^1.0.0",
     "execa": "^7.1.1",
     "kill-port": "^2.0.1",
     "multiformats": "^11.0.2",
