--- a/packages/contract_builder/package.json
+++ b/packages/contract_builder/package.json
@@ -9,14 +9,15 @@
   "typings": "./src/index.ts",
   "scripts": {
     "test": "tsc -p ../tsconfig.build.json && node ./dist/src/cli.js build ./examples/coin/index.ts && rm -rf ./dist",
+    "dev-build": "tsc -w -p ./tsconfig.build.json",
     "build": "tsc -p ./tsconfig.build.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@swc/core": "^1.3.68",
-    "@swc/wasm-web": "^1.3.66",
+    "@swc/core": "^1.3.70",
+    "@swc/wasm-web": "^1.3.70",
     "@trustack/vm": "workspace:^1.0.0",
     "cac": "^6.7.14",
     "chalk": "^5.3.0",
