--- a/packages/webui/package.json
+++ b/packages/webui/package.json
@@ -17,6 +17,7 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@trustack/common": "workspace:^1.0.0",
     "@trustack/contract": "workspace:^1.0.0",
+    "@trustack/contract_builder": "workspace:^1.0.0",
     "@trustack/node-modules-polyfill": "^0.2.5",
     "@trustack/rollup-plugin-node-polyfills": "^0.2.2",
     "@xstate/react": "^3.2.2",
