--- a/packages/webui/package.json
+++ b/packages/webui/package.json
@@ -24,6 +24,7 @@
     "antd": "^5.7.3",
     "buffer": "^6.0.3",
     "esbuild": "^0.17.19",
+    "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "multiformats": "^11.0.2",
     "react": "^18.2.0",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@playwright/test": "^1.36.2",
     "@rollup/plugin-inject": "^5.0.3",
+    "@types/lodash": "^4.14.196",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
