--- a/packages/contract_builder/package.json
+++ b/packages/contract_builder/package.json
@@ -16,11 +16,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.2",
+    "@rollup/plugin-wasm": "^6.1.3",
     "@swc/core": "^1.3.72",
     "@swc/wasm-web": "^1.3.72",
     "@trustack/vm": "workspace:^1.0.0",
     "cac": "^6.7.14",
     "chalk": "^5.3.0",
-    "multiformats": "^11.0.2"
+    "multiformats": "^11.0.2",
+    "rollup": "^3.28.0",
+    "rollup-plugin-typescript2": "^0.35.0",
+    "tslib": "^2.6.1",
+    "typescript": "^5.1.6"
   }
 }
