--- a/packages/land_app/package.json
+++ b/packages/land_app/package.json
@@ -34,6 +34,7 @@
     "@math.gl/web-mercator": "^3.6.3",
     "@trustack/common": "workspace:^1.0.0",
     "@trustack/contract": "workspace:^1.0.0",
+    "@trustack/contract_builder": "workspace:^1.0.0",
     "@trustack/node-modules-polyfill": "^0.2.5",
     "@trustack/rollup-plugin-node-polyfills": "^0.2.2",
     "@xstate/react": "^3.2.2",
