--- a/packages/webui/package.json
+++ b/packages/webui/package.json
@@ -26,6 +26,7 @@
     "esbuild": "^0.17.19",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
+    "monaco-editor": "^0.41.0",
     "multiformats": "^11.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
