--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -14,20 +14,19 @@
   "author": "scc",
   "license": "ISC",
   "dependencies": {
-    "@chainsafe/libp2p-gossipsub": "^8.0.1",
-    "@chainsafe/libp2p-noise": "^12.0.2",
-    "@libp2p/bootstrap": "^8.0.0",
-    "@libp2p/interface-peer-id": "^2.0.2",
-    "@libp2p/interface-pubsub": "^4.0.1",
-    "@libp2p/kad-dht": "^9.3.8",
-    "@libp2p/mdns": "^8.0.0",
-    "@libp2p/mplex": "^8.0.4",
-    "@libp2p/tcp": "^7.0.3",
-    "@libp2p/webrtc": "^2.0.11",
-    "@libp2p/websockets": "^6.0.3",
-    "@multiformats/multiaddr": "^12.1.5",
-    "interface-datastore": "^8.2.3",
-    "libp2p": "^0.45.9",
-    "uint8arrays": "^4.0.4"
+    "@chainsafe/libp2p-gossipsub": "^10.0.0",
+    "@chainsafe/libp2p-noise": "^13.0.0",
+    "@libp2p/bootstrap": "^9.0.4",
+    "@libp2p/interface": "^0.1.2",
+    "@libp2p/kad-dht": "^10.0.4",
+    "@libp2p/mdns": "^9.0.4",
+    "@libp2p/mplex": "^9.0.4",
+    "@libp2p/tcp": "^8.0.4",
+    "@libp2p/webrtc": "^3.1.6",
+    "@libp2p/websockets": "^7.0.4",
+    "@multiformats/multiaddr": "^12.1.7",
+    "interface-datastore": "^8.2.4",
+    "libp2p": "^0.46.6",
+    "uint8arrays": "^4.0.6"
   }
 }
