--- a/packages/skchain/package.json
+++ b/packages/skchain/package.json
@@ -18,30 +18,31 @@
   },
   "devDependencies": {
     "@types/libsodium-wrappers-sumo": "^0.7.5",
-    "@types/lodash": "^4.14.196",
-    "@types/node": "^20.4.5"
+    "@types/lodash": "^4.14.197",
+    "@types/node": "^20.5.1"
   },
   "dependencies": {
-    "@ethereumjs/trie": "^5.1.0",
-    "@ipld/dag-cbor": "^9.0.3",
-    "@ipld/dag-pb": "^4.0.4",
+    "@ethereumjs/trie": "^6.0.0",
+    "@ethereumjs/util": "^9.0.0",
+    "@ipld/dag-cbor": "^9.0.4",
+    "@ipld/dag-pb": "^4.0.5",
     "@libp2p/interface-pubsub": "^4.0.1",
-    "@multiformats/multiaddr": "^12.1.5",
+    "@multiformats/multiaddr": "^12.1.7",
     "@trustack/common": "workspace:^1.0.0",
     "@trustack/contract": "workspace:^1.0.0",
     "@trustack/network": "workspace:^1.0.0",
     "abstract-level": "^1.0.3",
     "bitset": "^5.1.1",
-    "blockstore-level": "^1.1.1",
-    "datastore-core": "^9.2.0",
-    "datastore-level": "^10.1.2",
-    "interface-datastore": "^8.2.3",
-    "ipfs-bitswap": "^18.0.3",
+    "blockstore-level": "^1.1.3",
+    "datastore-core": "^9.2.2",
+    "datastore-level": "^10.1.3",
+    "interface-datastore": "^8.2.4",
+    "ipfs-bitswap": "^19.0.0",
     "level": "^8.0.0",
     "libsodium-wrappers-sumo": "^0.7.11",
     "lodash": "^4.17.21",
     "memory-level": "^1.0.0",
-    "multiformats": "^11.0.2",
+    "multiformats": "^12.0.1",
     "ts-node": "^10.9.1",
     "tweetnacl": "^1.0.3",
     "typescript": "^5.1.6",
