--- a/packages/webui/package.json
+++ b/packages/webui/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "e2e": "playwright test",
     "build": "tsc && vite build",
-    "build-contract": "npx @trustack/contract_builder build ./src/ci/contract/test.contract.ts",
+    "build-contract": "./node_modules/.bin/contract_builder build ./src/ci/contract/test.contract.ts",
     "server": "node ./e2e/server.mjs",
     "preview": "vite preview"
   },
@@ -22,29 +22,29 @@
     "@trustack/node-modules-polyfill": "^0.2.5",
     "@trustack/rollup-plugin-node-polyfills": "^0.2.2",
     "@xstate/react": "^3.2.2",
-    "antd": "^5.7.3",
+    "antd": "^5.8.4",
     "buffer": "^6.0.3",
-    "esbuild": "^0.17.19",
+    "esbuild": "^0.19.2",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "monaco-editor": "^0.41.0",
-    "multiformats": "^11.0.2",
+    "multiformats": "^12.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.14.2",
-    "react-router-dom": "^6.14.2",
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0",
     "skchain": "workspace:^1.0.0",
     "xstate": "^4.38.2"
   },
   "devDependencies": {
-    "@playwright/test": "^1.36.2",
+    "@playwright/test": "^1.37.1",
     "@rollup/plugin-inject": "^5.0.3",
-    "@types/lodash": "^4.14.196",
-    "@types/react": "^18.2.17",
+    "@types/lodash": "^4.14.197",
+    "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
-    "sass": "^1.64.1",
+    "sass": "^1.66.1",
     "typescript": "^5.1.6",
-    "vite": "^4.4.7"
+    "vite": "^4.4.9"
   }
 }
