deps: update deps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,9 @@ jobs:
       - run: ssh -T git@github.com || true
       - run: git submodule update --init --recursive
       - name: Install pnpm
-        uses: pnpm/action-setup@v2.2.4
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
       - name: Set node version to 18
         uses: actions/setup-node@v3
@@ -42,7 +44,9 @@ jobs:
       - run: ssh -T git@github.com || true
       - run: git submodule update --init --recursive
       - name: Install pnpm
-        uses: pnpm/action-setup@v2.2.4
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
       - name: Set node version to 18
         uses: actions/setup-node@v3
