--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,7 +16,9 @@ jobs:
       - run: ssh -T git@github.com || true
       - run: git submodule update --init --recursive
       - name: Install pnpm
-        uses: pnpm/action-setup@v2.2.4
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
       - name: Set node version to 18
         uses: actions/setup-node@v3
@@ -56,7 +58,9 @@ jobs:
       - run: ssh -T git@github.com || true
       - run: git submodule update --init --recursive
       - name: Install pnpm
-        uses: pnpm/action-setup@v2.2.4
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
       - name: Set node version to 18
         uses: actions/setup-node@v3
